scripts/nullness/nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8.txt
../nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Main.java:115: error: [initialization.fields.uninitialized] the constructor does not initialize fields: weibull
    public Main() {
           ^
../nullgtn/url85e313f409_edugasser_Ascensor_tgz-pJ8-ascensor_MainJ8/src/ascensor/Cola.java:46: error: [return] incompatible types in return.
        return datoAuxiliar;
               ^
  type of expression: @Initialized @Nullable Pasajero
  method return type: @Initialized @NonNull Pasajero
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
